# strata-dashboards

./: .editorconfig  .env.example  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  justfile  mock_rpc.Dockerfile  usage_keys.json
.github/workflows/: cd.yml  ci.yml
backend/: .env.example  .gitignore  Cargo.toml  activity_keys.json  rust-toolchain.toml
backend/src/: activity.rs  bridge.rs  config.rs  db.rs  indexer.rs  main.rs  pgu64.rs  retry_policy.rs  usage.rs  usage_stats.rs  utils.rs  wallets.rs
frontend/: .gitignore  Dockerfile  entrypoint.sh  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/public/: config.json
frontend/src/: App.tsx  main.tsx  utils.ts
frontend/src/components/: BalanceCard.tsx  StatusCard.tsx
frontend/src/hooks/: useActivityStats.ts  useBridgeStatus.ts  useConfig.ts  useNetworkStatus.ts  usePaymasterWallets.ts  useUsageStats.ts
frontend/src/pages/: Activity.tsx  Bridge.tsx  Dashboard.tsx  Usage.tsx
frontend/src/providers/: ConfigProvider.tsx
frontend/src/styles/: activity.css  bridge.css  index.css  network.css  usage.css
mock_rpc/: .gitignore  Cargo.toml
mock_rpc/mock_data/bridge_rpc/: bridge_duties.json  bridge_operators.json  claim_infos.json  claims.json  deposit_infos.json  operator_status.json  withdrawal_infos.json
mock_rpc/mock_data/strata_rpc/: deposit_entries.json
mock_rpc/src/: main.rs  rpc_server.rs
strata-dashboards/: index.html  package-lock.json  package.json
strata-dashboards/src/: App.tsx
strata-dashboards/src/components/: BalanceCard.tsx  StatusCard.tsx
strata-dashboards/src/hooks/: useNetworkStatus.ts  usePaymasterWallets.ts  useUsageStats.ts
strata-dashboards/src/pages/: Bridge.tsx  Dashboard.tsx  Usage.tsx
strata-dashboards/src/styles/: index.css
