[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
jsonrpsee = { version = "0.24", features = ["http-client"] }
reqwest = { version = "0.12.12", features = ["json"] }
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
