[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.38"
dotenvy = "0.15"
env_logger = "0.11.6"
jsonrpsee = { version = "0.24", features = ["http-client"] }
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

strata-bridge-rpc = { git = "https://github.com/alpenlabs/strata-bridge.git", features = ["client"]}
strata-bridge-primitives = { git = "https://github.com/alpenlabs/strata-bridge.git" }

[dev-dependencies]
mockito = "1.6.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "backend"
path = "src/main.rs"
