[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.7"
bitcoin = { version = "0.32.5", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.38"
dotenvy = "0.15"
jsonrpsee = { version = "0.24", features = ["http-client"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = [
  "alloc",
  "raw_value",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

strata-bridge-rpc = { git = "https://github.com/alpenlabs/strata-bridge.git", features = ["client"]}
strata-bridge-primitives = { git = "https://github.com/alpenlabs/strata-bridge.git" }

[dev-dependencies]
mockito = "1.6.1"

[[bin]]
name = "backend"
path = "src/main.rs"
