[package]
name = "mock_rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.81"
axum = "0.7"
bitcoin = { version = "0.32.5", features = ["rand-std", "serde"] }
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
jsonrpsee-types = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = [
  "alloc",
  "raw_value",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

strata-bridge-rpc = { git = "https://github.com/alpenlabs/strata-bridge.git", features = ["client"]}
strata-bridge-primitives = { git = "https://github.com/alpenlabs/strata-bridge.git" }

[[bin]]
name = "mock_rpc"
path = "src/main.rs"
